--- a/lang/en.json
+++ b/lang/en.json
@@ -187,7 +187,7 @@
     "roomrules": "\/me Please find the room rules here: %%LINK%%",
     "sessionstats": "\/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
     "forceskip": "\/me [%%NAME%% used forceskip]",
-    "madeby": "\/me This bot was made by %%NAME%%.",
+    "madeby": "\/me This bot was made by djmonstercat.",
     "activefor": "I have been active for %%TIME%%.",
     "swapinvalid": "\/me [@%%NAME%%] Invalid user specified. (No names with spaces!)",
     "swapwlonly": "\/me [@%%NAME%%] Please only swap users that are in the waitlist!",
@@ -202,7 +202,7 @@
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w\/m): %%RATIO%%.",
     "website": "\/me Please visit our website: %%LINK%%",
     "youtube": "\/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
-    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M.",
+    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%% :+1: | %%GRABS%% :heart: | %%MEHS%% :sob:",
     "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
     "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes.",
     "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
