--- a/lang/en.json
+++ b/lang/en.json
@@ -59,7 +59,7 @@
     "currentlang": "\/me Language currently set to: %%LANGUAGE%%",
     "langerror": "\/me The language you've selected isn't available. Please visit %%LINK%% to find a list of languages available.",
     "langset": "\/me Language now set to: %%LANGUAGE%%",
-    "retrievingdata": "Retrieving previously stored data.",
+    "retrievingdata": "Loading...",
     "datarestored": "Previously stored data successfully retrieved.",
     "greyuser": "Only bouncers and up can run a bot.",
     "bouncer": "The bot can't move people when it's run as a bouncer.",
